# Dense-CRF

./: CMakeLists.txt  README.md  README.txt
examples/: CMakeLists.txt  dense_inference.cpp
include/: densecrf.h
